@@ -96,7 +96,7 @@ ENTRY strlcat
 	ld	__tmp_reg__, X+
 	tst	__tmp_reg__
 	brne	1b
-	subi	XL, 1
+	sbiw	XL, 1
 	rjmp	3f
 
   ; copy loop
